# ccgadget

./: .gitignore  CLAUDE.md  README.md
client/esp32s3/: Cargo.toml  diagram.json  wokwi.toml
client/esp32s3-flash/: Cargo.toml  wokwi.toml
server/cli/: Cargo.toml  README.md  build.sh  test.sh  test_all_hooks.sh
server/cli/src/: bluetooth.rs  main.rs
server/cli/test_data/: notification.json  post_tool_use.json  pre_tool_use.json  user_prompt_submit.json
server/cli/tests/: bluetooth_tests.rs  integration_tests.rs
