[package]
name = "ccgadget"
version = "0.1.0"
edition = "2021"
description = "CLI tool for CCGadget IoT hardware monitoring device"
authors = ["Joel Chan"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
